--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/styled-components": "^5.1.32",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.1.1",
+    "undefined": "@expo-google-fonts/poppins]"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.10",
+    "@types/react": "^18.2.40",
+    "@types/react-test-renderer": "^18.0.7",
+    "typescript": "^5.3.2"
   },
   "private": true
 }
